--- a/common/css/style.css
+++ b/common/css/style.css
@@ -43,10 +43,22 @@ nav ul {height:100%;}
 .s2 {position: relative;}
 .s2 h2 {position: absolute; top:130px; text-align: center; display: block; width:100%; font-size:36px;}
 .game_box {width:1200px; height:635px; background:#fff; position: absolute; top:100px; bottom:0; left:0; right:0; margin:auto;}
-.game_list {width:1200px ; border-right:1px solid #ddd; height:100%; float: left; overflow: hidden;}
-.g_1 img { width: 1200px; }
-/*
-.g_img { width:calc(100%/3); float: left; height:240px;border-bottom: 1px solid #ddd; border-right: 1px solid #ddd; background:url('/common/images/g1.png')center; background-size:cover;}
-.g_title { width:calc(100%/3); height:50px; }
-.g_title h3 { width:100%; text-align: center; line-height:50px; font-size:24px; border-bottom: 1px solid #ddd;}
-*/
+.game_list {width:3600px; border-right:1px solid #ddd; height:100%; float: left; overflow: hidden; }
+.g_1 img { width: 1200px; height: 100%; }
+
+/* Section3 */
+.s3 { position: relative; }
+.s3 h2 {position: absolute; top:130px; text-align: center; display: block; width:100%; color: #fff; font-size:36px;}
+.ub_box {width:1200px; height:635px; background: #2980b9; position: absolute; top:100px; bottom:0; left:0; right:0; margin:auto;}
+.ub_list {width:calc(100%/3); height:100%; float: left; }
+.ub_list:nth-child(2) { background:#3498db; }
+
+.ub_box2 { background: rgb(17, 60, 94); }
+.ub_inbox {width:1200px; height:635px; background: #fff; position: absolute; top:100px; bottom:0; left:0; right:0; margin:auto; }
+.a{  width: 400px; height: 50%; float: left; }
+.table1 { background: #2ecc71; }
+.table2 { background: #e74c3c; }
+.table3 { background: #3498db; }
+.table4 { background: #f1c40f; }
+.table5 { background: #9b59b6; }
+.table6 { background: #ff8888; }
