--- a/common/css/style.css
+++ b/common/css/style.css
@@ -44,18 +44,28 @@ nav ul {height:100%;}
 .s2 h2 {position: absolute; top:130px; text-align: center; display: block; width:100%; font-size:36px;}
 .game_box {width:1200px; height:635px; background:#fff; position: absolute; top:100px; bottom:0; left:0; right:0; margin:auto;}
 .game_list {width:3600px; border-right:1px solid #ddd; height:100%; float: left; overflow: hidden; }
-.gg { width: 1200px; height: 100%; }
+.g_1 img { width: 1200px; height: 100%; }
 
 /* Section3 */
 .s3 { position: relative; }
-.s3 h2 {position: absolute; top:130px; text-align: center; display: block; width:100%; color: #fff; font-size:36px;}
+.s3 > h2 {position: absolute; top:130px; text-align: center; display: block; width:100%; color: #fff; font-size:36px;}
 .ub_box {width:1200px; height:635px; background: #2980b9; position: absolute; top:100px; bottom:0; left:0; right:0; margin:auto;}
+.ub_web { margin-top: 20px; padding: 8px; text-align: center; display: block; width:100%; color: #fff; font-size:20px; }
+
+
 .ub_list {width:calc(100%/3); height:100%; float: left; }
 .ub_list:nth-child(2) { background:#3498db; }
+.ub_list > h2 { margin-top: 20px; width:100%; color: #fff; font-size:36px; }
+
+.ub1_img { width: 140px; height: 140px; margin: 0 auto; margin-top: 50px; background: url(../images/mcom.png)no-repeat; }
+.ub1_img2 { width: 140px; height: 140px; margin: 0 auto; margin-top: 50px; background: url(../images/netimg.png)no-repeat; }
+.ub1_img3 { width: 140px; height: 140px; margin: 0 auto; margin-top: 50px; background: url(../images/iotimg.png)no-repeat; }
 
 .ub_box2 { background: rgb(17, 60, 94); }
+h3 { position: absolute; top:130px; text-align: center; display: block; width:100%; color: #fff; font-size:36px; }
 .ub_inbox {width:1200px; height:635px; background: #fff; position: absolute; top:100px; bottom:0; left:0; right:0; margin:auto; }
-.a{  width: 400px; height: 50%; float: left; }
+.a{  width: 400px; height: 50%; float: left; transition: 0.8s; }
+.ub_inbox .a:hover{ opacity: 0; }
 .table1 { background: #2ecc71; }
 .table2 { background: #e74c3c; }
 .table3 { background: #3498db; }
@@ -64,3 +74,15 @@ nav ul {height:100%;}
 .table6 { background: #ff8888; }
 
 /* Section5 */
+.s5 h2{position: absolute; top:130px; text-align: center; display: block; width:100%; font-size:36px; color:#fff}
+#map-canvas {width:55%; height:100%; border:1px solid #ddd; float: left;}
+.contact_info { width:43%; height:100%; padding:0 10px; float: right;}
+.contact_info >* {color:#fff;}
+.way { font-size: 32px; }
+.footer {background:#333; width:100%; height:100px; position: absolute; bottom:0;}
+.footer_main {max-width:1200px; margin:0 auto; height:100%;}
+.ft_l {width:20%; height:100%; float: left; padding:5px;}
+.ft_r {width:80%; height:100%; float: right; padding-top: 25px;}
+.ft_r p{color:#999; font-size:12px; }
+.ft_logo {font-size:36px; color:#fff; font-weight:bold; line-height:100px; text-align: center;}
+.contact_main {width:1200px; height:560px; position: absolute; top:50px;  bottom:0; left:0; right:0; margin:auto; }
