--- a/common/css/style.css
+++ b/common/css/style.css
@@ -141,17 +141,31 @@ nav ul {height:100%;}
 
 /* 게시판 */
 .noticeboard .header_wrap #menu .acc a{color:#f5c032; border-bottom:2px solid #f5c032;}
-.gsp {width:100%; height:100%; background:#ddd; padding:80px 0;}
+.gsp {width:100%; height:100%; background:#eeeeee; padding:80px 0;}
 .gsp_main {width:1200px; margin:0 auto; padding:80px 0}
 .gsp_main p:first-child {font-size:36px; padding-bottom:10px; }
 .gsp_main p:nth-child(2) {font-size:18px; padding-bottom:50px;;}
-.table {width:100%; height:500px; border-radius:3px; background:#fff; box-shadow:1px 2px 5px 0 rgba(0,0,0,.2);}
+.table {width:100%;  border-radius:3px; background:#fff; box-shadow:1px 2px 5px 0 rgba(0,0,0,.2);}
 .tb_header {width:100%; height:50px; border-bottom:2px solid #ccc;}
 .tb_header ul {width:100%; height:100%;}
 .tb_header ul li {float: left; height:100%; border-right:1px solid #efefef; text-align: center; line-height:50px; font-size:18px; font-weight:bold;}
 .idx {width:100px;}
-.title {width:750px;}
+.title {width:700px;}
 .writer {width:200px;}
-.date {width:150px;}
+.date {width:200px;}
 
+.tb_section {width:100%;}
+.list {width:100%; height:60px; position: relative; transition:all 0.3s; cursor:pointer; border-bottom:1px solid #ddd;}
+.list:hover {background:rgba(0,0,0,.6);}
+.list li {float: left; height:100%; text-align: center; line-height:60px; }
 
+.tb_footer {width:100%; padding-top:10px; height:50px;}
+.tb_footer button {width:100px; height:100%; border-radius:5px; border:none; float: right;  cursor:pointer;}
+.wt {background: #333; color:#fff; }
+.cancle {background:#999; color:#fff; margin-left:5px;}
+
+/* 게시판 글쓰기 */
+.wt_tb {padding:10px; height:400px;}
+#title {width:80%; border:1px solid #ddd; height:10%; padding:10px; resize:none; float: left;}
+#writer {width:19%; border:1px solid #ddd; height:10%; padding:10px; resize:none; float: right;}
+#content {width:100%; border:1px solid #ddd; height:88%; margin:7px 0 0 0; padding:10px; resize:none;}
