--- a/common/css/style.css
+++ b/common/css/style.css
@@ -169,3 +169,13 @@ nav ul {height:100%;}
 #title {width:80%; border:1px solid #ddd; height:10%; padding:10px; resize:none; float: left;}
 #writer {width:19%; border:1px solid #ddd; height:10%; padding:10px; resize:none; float: right;}
 #content {width:100%; border:1px solid #ddd; height:88%; margin:7px 0 0 0; padding:10px; resize:none;}
+
+/* 게시판 글보기 */
+.view {width:100%; height:100%; background:#eeeeee; padding:80px 0;}
+.view_main {width:1200px; margin:0 auto; padding:80px 0}
+.view_main p:first-child {font-size:36px; padding-bottom:10px; }
+.view_main p:nth-child(2) {font-size:18px; padding-bottom:50px;;}
+.view_back { background: #333; color:#fff; width:85px; height:100%; border-radius:5px; border:none; float: right;  cursor:pointer; padding: 9px; }
+.view_header { width:100%; border-radius:3px; background:#fff; box-shadow:1px 2px 5px 0 rgba(0,0,0,.2); padding:10px; height:400px; }
+.view_title { width:100%; border:1px solid #ddd; height:10%; padding:10px; resize:none; float: left; }
+.view_content { width:100%; border:1px solid #ddd; height: 88%; margin-top: 45px; padding:10px; resize:none; }
