--- a/common/css/style.css
+++ b/common/css/style.css
@@ -161,8 +161,8 @@ nav ul {height:100%;}
 
 .tb_footer {width:100%; padding-top:10px; height:50px; }
 .tb_footer button {width:100px; height:100%; border-radius:5px; border:none; float: right;  cursor:pointer;}
-.wt {background: #333; color:#fff; }
-.cancle {background:#999; color:#fff; margin-left:5px;}
+.wt {background: #333; color:#fff; margin-left:5px;}
+.cancle {background:#999; color:#fff; }
 
 /* 게시판 글쓰기 */
 .wt_tb {padding:10px; height:400px;}
@@ -176,10 +176,12 @@ nav ul {height:100%;}
 .view_main p:first-child {font-size:36px; padding-bottom:10px; }
 .view_main p:nth-child(2) {font-size:18px; padding-bottom:50px;;}
 .view_header { width:100%; border-radius:3px; background:#fff; box-shadow:1px 2px 5px 0 rgba(0,0,0,.2); padding:10px; height:400px; }
+.view_idx { display: none; }
 .view_title { width:74%; border:1px solid #ddd; height:10%; padding:10px; resize:none; float: left; }
-.view_name { width:10%; border:1px solid #ddd; height:10%; padding:10px; resize:none; float: left; }
-.view_date { width:16%; border:1px solid #ddd; height:10%; padding:10px; resize:none; float: left; }
+.view_name { width:16%; border:1px solid #ddd; height:10%; padding:10px; resize:none; float: left; }
+.view_date { width:10%; border:1px solid #ddd; height:10%; padding:10px; resize:none; float: left; }
 .view_content { width:100%; border:1px solid #ddd; height: 88%; margin-top: 45px; padding:10px; resize:none; }
+
 .view_footer { width: 100%; padding-top: 10px; height: 50px; }
 .view_del { background: #333; color:#fff; width:100px; height:100%; border-radius:5px; border:none; float: right;  cursor:pointer; padding: 9px; margin-left: 10px; font-family: "go"; font-size: 13px; text-align: center; transition: 0.7s;}
 .view_back { background: #333; color:#fff; width:100px; height:100%; border-radius:5px; border:none; float: right;  cursor:pointer; padding: 9px; font-family: "go"; font-size: 13px; text-align: center; transition: 0.7s; }
